Mana ang orga dashboard nya na table nasad ang create event skill selection

--- a/Tabang-Hub/Tabang-Hub/Views/Admin/Reports.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Admin/Reports.cshtml
@@ -115,7 +115,7 @@
                                             </div>
                                             <div>
                                                 <h6 class="text-muted">Total Donation</h6>
-                                                <h6 class="font-extrabold mb-0">@Model.totalDonation</h6>
+                                                <h6 class="font-extrabold mb-0">₱@Model.totalDonation</h6>
                                             </div>
                                         </div>
                                     </div>
