--- a/Tabang-Hub/Tabang-Hub/Views/Organization/Reports.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Organization/Reports.cshtml
@@ -95,7 +95,7 @@
                                 </div>
                                 <div>
                                     <h6 class="text-muted">Total Donation</h6>
-                                    <h6 class="font-extrabold mb-0">@Model.totalDonation</h6>
+                                    <h6 class="font-extrabold mb-0">₱@Model.totalDonation</h6>
                                 </div>
                             </div>
                         </div>
